[package]
name = "jorvote"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolasdiprima@iohk.io>"]
edition = "2018"
repository = "https://github.com/input-output-hk/jorvot"
license = "MIT OR Apache-2.0"

[dependencies]
iced = { version = "0.1.1" }
env_logger = "0.7"
wallet-core = { path = "./chain-wallet-libs/bindings/wallet-core" }