[package]
name = "jorvote"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolasdiprima@iohk.io>"]
edition = "2018"
repository = "https://github.com/input-output-hk/jorvot"
license = "MIT OR Apache-2.0"

[dependencies]
iced = { version = "0.1.1", features = [ "tokio" ] }
iced_native = "*"
iced_futures = "0.1.2"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "*"
reqwest = "0.10"
env_logger = "0.7"
wallet-core = { path = "./chain-wallet-libs/bindings/wallet-core" }
chain-impl-mockchain = { path = "./chain-wallet-libs/chain-deps/chain-impl-mockchain" }
chain-addr = { path = "./chain-wallet-libs/chain-deps/chain-addr" }